--- a/requirements.txt
+++ b/requirements.txt
@@ -4,12 +4,14 @@ asgiref==3.9.1
 attrs==25.3.0
 backoff==2.2.1
 bcrypt==4.3.0
+blinker==1.9.0
 build==1.3.0
 cachetools==5.5.2
 certifi==2025.8.3
 charset-normalizer==3.4.3
 chromadb==1.0.12
 click==8.2.1
+colorama==0.4.6
 coloredlogs==15.0.1
 distro==1.9.0
 durationpy==0.10
@@ -23,6 +25,7 @@ google-ai-generativelanguage==0.6.18
 google-api-core==2.25.1
 google-auth==2.40.3
 googleapis-common-protos==1.70.0
+greenlet==3.2.4
 groq==0.31.1
 grpcio==1.74.0
 grpcio-status==1.74.0
@@ -36,6 +39,8 @@ humanfriendly==10.0
 idna==3.10
 importlib_metadata==8.7.0
 importlib_resources==6.5.2
+intel-openmp==2021.4.0
+itsdangerous==2.2.0
 Jinja2==3.1.6
 jiter==0.10.0
 joblib==1.5.2
@@ -54,6 +59,7 @@ langsmith==0.4.27
 markdown-it-py==4.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
+mkl==2021.4.0
 mmh3==5.2.0
 mpmath==1.3.0
 networkx==3.4.2
@@ -63,6 +69,7 @@ onnxruntime==1.22.1
 openai==1.107.1
 opentelemetry-api==1.36.0
 opentelemetry-exporter-otlp-proto-common==1.36.0
+opentelemetry-exporter-otlp-proto-grpc==1.36.0
 opentelemetry-instrumentation==0.57b0
 opentelemetry-instrumentation-asgi==0.57b0
 opentelemetry-instrumentation-fastapi==0.57b0
@@ -77,15 +84,16 @@ pillow==11.3.0
 posthog==5.4.0
 proto-plus==1.26.1
 protobuf==6.32.0
-PyPDF2==3.0.1
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pybase64==1.4.2
 pydantic==2.11.7
 pydantic_core==2.33.2
 Pygments==2.19.2
+PyPDF2==3.0.1
 PyPika==0.48.9
 pyproject_hooks==1.2.0
+pyreadline3==3.5.4
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 PyYAML==6.0.2
@@ -108,6 +116,7 @@ sniffio==1.3.1
 SQLAlchemy==2.0.43
 starlette==0.45.3
 sympy==1.14.0
+tbb==2021.13.1
 tenacity==9.1.2
 threadpoolctl==3.6.0
 tiktoken==0.7.0
@@ -120,10 +129,10 @@ typing-inspection==0.4.1
 typing_extensions==4.15.0
 urllib3==2.5.0
 uvicorn==0.35.0
-uvloop==0.21.0; sys_platform != 'win32'
 watchfiles==1.1.0
 websocket-client==1.8.0
 websockets==15.0.1
+Werkzeug==3.1.3
 wrapt==1.17.3
 zipp==3.23.0
 zstandard==0.24.0
